--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "daspeweb/framework",
+    "name": "daspeweb/looden-web",
     "type": "library",
     "description": "",
     "authors": [
